# STG_Communication_System

./: CMakeLists.txt  Makefile  README.md  main.c  main.c~  stg_system
common/: constants.h  debug_utils.c  debug_utils.h  event_payloads.h  mpi_datatypes.c  mpi_datatypes.h  temp_metrics.c  temp_metrics.h  utils.h
coordinator/: coordinator.c  coordinator.h
election/: leader_elect_manager.c  leader_elect_manager.h
ground_station/: ground_station.c  ground_station.h
satellite/: satellite.c  satellite.h
test_files/test_file_1/: N10.txt
test_files/test_file_2/: N30.txt
